# bullet-bots

./: .clippy.toml  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  HACKING.md  LICENSE  README.md  cliff.toml  rustfmt.toml
.cargo/: audit.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
config/: avellaneda-stoikov-example.toml  avellaneda-stoikov-test.toml  funding-arb-example.toml  grid-example.toml  grid-testnet-chatty.toml  grid-testnet-fill-test.toml  grid-tight.toml  reference-arb-example.toml  simple-mm-example.toml
crates/bb-bot/: Cargo.toml
crates/bb-bot/src/: main.rs  observer.rs
crates/bb-core/: Cargo.toml
crates/bb-core/examples/: minimal.rs
crates/bb-core/src/: backoff.rs  broker.rs  clock.rs  config.rs  engine.rs  error.rs  events.rs  exchange.rs  health.rs  keys.rs  lib.rs  status.rs  strategy.rs  types.rs
crates/bb-core/src/harness/: actor.rs  builder.rs  bus.rs  event.rs  feed.rs  harness.rs  mod.rs  status.rs  testing.rs
crates/bb-core/src/helpers/: client_id.rs  inventory.rs  mod.rs  parse.rs  tick_feed.rs
crates/exchanges/binance/: Cargo.toml
crates/exchanges/binance/src/: feed.rs  lib.rs
crates/exchanges/bullet/: Cargo.toml
crates/exchanges/bullet/src/: adapter.rs  broker.rs  config.rs  connection.rs  convert.rs  delegate.rs  key.rs  lib.rs
crates/exchanges/hyperliquid/: Cargo.toml
crates/exchanges/hyperliquid/src/: adapter.rs  broker.rs  config.rs  connection.rs  convert.rs  lib.rs
crates/strategies/avellaneda-stoikov/: Cargo.toml
crates/strategies/avellaneda-stoikov/src/: config.rs  lib.rs  model.rs  strategy.rs  volatility.rs
crates/strategies/funding-arb/: Cargo.toml
crates/strategies/funding-arb/src/: config.rs  lib.rs  state.rs  strategy.rs
crates/strategies/grid/: Cargo.toml  LIT_REVIEW.md  README.md
crates/strategies/grid/src/: config.rs  ema.rs  grid.rs  lib.rs  strategy.rs
crates/strategies/reference-arb/: Cargo.toml  README.md
crates/strategies/reference-arb/src/: config.rs  lib.rs  strategy.rs
crates/strategies/simple-mm/: Cargo.toml  README.md
crates/strategies/simple-mm/src/: config.rs  lib.rs  strategy.rs
docs/: ARCHITECTURE.md  CONTRIBUTING-EXCHANGES.md
docs/strategies/: avellaneda-stoikov.md  funding-arb.md  grid-design-notes.md  grid-future-work.md
docs/superpowers/specs/: 2026-06-18-base58-delegate-signers-design.md
