[package]
name = "bb-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary entrypoint for bullet-bots trading system"

[lints]
workspace = true

[[bin]]
name = "bb-bot"
path = "src/main.rs"

[dependencies]
bb-core = { workspace = true }
bb-exchange-bullet = { workspace = true }
bb-exchange-hyperliquid = { workspace = true }
bb-strategy-grid = { workspace = true }
bb-strategy-simple-mm = { workspace = true }
bb-strategy-funding-arb = { workspace = true }
bb-strategy-avellaneda-stoikov = { workspace = true }
bb-strategy-reference-arb = { workspace = true }
bb-exchange-binance = { workspace = true }
bullet-rust-sdk = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
async-trait = { workspace = true }
