[package]
name = "bb-exchange-binance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binance read-only reference price feed for bullet-bots"

[lints]
workspace = true

[dependencies]
bb-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
