[package]
name = "bb-exchange-bullet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bullet exchange adapter for bullet-bots"

[lints]
workspace = true

[dependencies]
bb-core = { workspace = true }
bullet-rust-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
