[package]
name = "bb-strategy-funding-arb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Funding rate arbitrage strategy for bullet-bots"

[lints]
workspace = true

[dependencies]
bb-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[lib]
doctest = false
