[package]
name = "bb-strategy-grid"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Grid trading strategy for bullet-bots"

[lints]
workspace = true

[dependencies]
bb-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[lib]
doctest = false
