[package]
name = "bb-strategy-reference-arb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reference-price arbitrage strategy (Bullet vs Binance)"

[lints]
workspace = true

[dependencies]
bb-core = { workspace = true }
bb-exchange-binance = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
